# aeovim

./: Cargo.toml  DESIGN.md  IMPLEMENTATION_PLAN.md  INTEGRATION.md  README.md
src/: agent.rs  app.rs  main.rs  protocol.rs  store.rs  theme.rs  ui.rs
