[package]
name = "aeovim"
version = "0.0.1"
edition = "2021"
description = "aeovim — a modal TUI for orchestrating coding agents (walking skeleton). Binary: avim."
license = "MIT"

# The project is `aeovim`; the command is `avim` (Neovim -> nvim).
[[bin]]
name = "avim"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "sync", "time"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"

[profile.release]
opt-level = 2
